Bug fix: pills stack vertical on mobile

--- a/src/css/prefixed-style.css
+++ b/src/css/prefixed-style.css
@@ -193,5 +193,5 @@ span.icon-bar {
 
 .nav-pills li {
     padding: 0;
-    width: 49.865%;
+    width: calc(50% - 1px);
 }
